--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
             document.getElementById("stopBtn").addEventListener("click", stopTimer);
             document.getElementById("resetBtn").addEventListener("click", resetTimer);
             document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
-            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn); // Koppeling met de knop
+            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
 
             document.querySelectorAll(".adjust-time").forEach(button => {
                 button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
             });
 
-            selecteerTimer(0); // Standaard de eerste timer selecteren
+            selecteerTimer(0);
             updateWeergave();
         });
     </script>
