--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module">
         // Firebase configuratie
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",  // Vul je eigen Firebase API key in
+            apiKey: "YOUR_API_KEY",
             authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
             databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
             projectId: "de-slimste-kameraad-timer-ppt",
