--- a/index.html
+++ b/index.html
@@ -4,121 +4,195 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <script defer>
-        document.addEventListener("DOMContentLoaded", () => {
-            let timers = [60, 60, 60, 60];
-            let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
-            let intervals = [null, null, null, null];
-            let geselecteerdeTimer = 0;
-            let zichtbareTimers = [true, true, true, true];
+    <script type="module">
+        // Firebase configuratie
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",  // Voeg hier je eigen API-sleutel in
+            authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
+            databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "de-slimste-kameraad-timer-ppt",
+            storageBucket: "de-slimste-kameraad-timer-ppt.firebasestorage.app",
+            messagingSenderId: "63484640762",
+            appId: "1:63484640762:web:6541546d615df83c5b7843"
+        };
 
-            function updateWeergave() {
-                timers.forEach((tijd, index) => {
-                    const timerElement = document.getElementById(`timer${index}`);
-                    if (timerElement) {
-                        timerElement.textContent = tijd;
+        // Firebase importeren
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+
+        // Initialiseer Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
+        // Firebase referenties
+        const timersRef = ref(db, 'timers');
+        const teamNamesRef = ref(db, 'teamNames');
+        const selectedTimerRef = ref(db, 'selectedTimer');
+
+        // Variabelen voor timers en teamnamen
+        let timers = [60, 60, 60, 60];
+        let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
+        let intervals = [null, null, null, null];
+        let geselecteerdeTimer = 0;
+        let zichtbareTimers = [true, true, true, true];
+
+        // Functie om de weergave van de timers bij te werken
+        function updateWeergave() {
+            timers.forEach((tijd, index) => {
+                const timerElement = document.getElementById(`timer${index}`);
+                if (timerElement) {
+                    timerElement.textContent = tijd;
+                }
+
+                const teamNaamEl = document.getElementById(`team-name-${index}`);
+
+                // Controleer of het teamnaam element bestaat voordat je verder gaat
+                if (teamNaamEl) {
+                    if (teamNaamEl.tagName.toLowerCase() === "input") {
+                        let nieuwNaamDiv = document.createElement("div");
+                        nieuwNaamDiv.id = `team-name-${index}`;
+                        nieuwNaamDiv.classList.add("team-name");
+                        nieuwNaamDiv.textContent = teamNamen[index];
+                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                        teamNaamEl.replaceWith(nieuwNaamDiv);
+                    } else {
+                        teamNaamEl.textContent = teamNamen[index];
+                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
                     }
+                }
 
-                    const teamNaamEl = document.getElementById(`team-name-${index}`);
+                document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
+            });
+        }
 
-                    if (teamNaamEl) {
-                        if (teamNaamEl.tagName.toLowerCase() === "input") {
-                            let nieuwNaamDiv = document.createElement("div");
-                            nieuwNaamDiv.id = `team-name-${index}`;
-                            nieuwNaamDiv.classList.add("team-name");
-                            nieuwNaamDiv.textContent = teamNamen[index];
-                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
-                            teamNaamEl.replaceWith(nieuwNaamDiv);
-                        } else {
-                            teamNaamEl.textContent = teamNamen[index];
-                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
-                        }
+        // Synchroniseer timers met Firebase
+        function syncTimers() {
+            set(timersRef, timers);  // Zet de timerstatus in Firebase
+        }
+
+        // Synchroniseer teamnamen met Firebase
+        function syncTeamNames() {
+            set(teamNamesRef, teamNamen);  // Zet de teamnamen in Firebase
+        }
+
+        // Synchroniseer de geselecteerde timer met Firebase
+        function syncSelectedTimer() {
+            set(selectedTimerRef, geselecteerdeTimer);  // Zet de geselecteerde timer in Firebase
+        }
+
+        // Synchroniseren van wijzigingen van Firebase naar de browser
+        function syncWithFirebase() {
+            onValue(timersRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    timers = data;
+                    updateWeergave();
+                }
+            });
+
+            onValue(teamNamesRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    teamNamen = data;
+                    updateWeergave();
+                }
+            });
+
+            onValue(selectedTimerRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data !== undefined) {
+                    geselecteerdeTimer = data;
+                    updateWeergave();
+                }
+            });
+        }
+
+        // Timer functies
+        function startTimer() {
+            if (intervals[geselecteerdeTimer]) return;
+            intervals[geselecteerdeTimer] = setInterval(() => {
+                if (timers[geselecteerdeTimer] > 0) {
+                    timers[geselecteerdeTimer]--;
+                    updateWeergave();
+                    syncTimers(); // Synchroniseer elke seconde
+                } else {
+                    stopTimer(); // Stop de timer als deze op 0 komt
+                }
+            }, 1000);
+            syncSelectedTimer(); // Synchroniseer geselecteerde timer
+        }
+
+        function stopTimer() {
+            clearInterval(intervals[geselecteerdeTimer]);
+            intervals[geselecteerdeTimer] = null;
+            syncTimers(); // Synchroniseer de gestopte timer
+        }
+
+        function resetTimer() {
+            timers = [60, 60, 60, 60];
+            updateWeergave();
+            syncTimers(); // Synchroniseer reset
+        }
+
+        function pasTijdAan(aantal) {
+            timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
+            updateWeergave();
+            syncTimers(); // Synchroniseer aangepaste tijd
+        }
+
+        // Timer selectie
+        function selecteerTimer(index) {
+            document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+            geselecteerdeTimer = index;
+            document.getElementById(`timer-container-${index}`).classList.add("selected");
+            document.getElementById("timerSelect").value = index;
+            syncSelectedTimer(); // Synchroniseer geselecteerde timer
+        }
+
+        // Teamnaam bewerkbaar maken
+        function maakTeamnaamBewerkbaar(index) {
+            let naamLabel = document.getElementById(`team-name-${index}`);
+            
+            if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
+                let inputVeld = document.createElement("input");
+                inputVeld.type = "text";
+                inputVeld.value = teamNamen[index];
+                inputVeld.classList.add("team-input");
+                inputVeld.style.fontSize = "30px";
+                inputVeld.style.width = "80%";
+
+                naamLabel.replaceWith(inputVeld);
+                inputVeld.focus();
+
+                inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+
+                inputVeld.addEventListener("keydown", (event) => {
+                    if (event.key === "Enter") {
+                        slaNieuweTeamnaamOp(index, inputVeld.value);
                     }
-
-                    document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
                 });
             }
+        }
 
-            function selecteerTimer(index) {
-                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-                geselecteerdeTimer = index;
-                document.getElementById(`timer-container-${index}`).classList.add("selected");
-                document.getElementById("timerSelect").value = index;
+        function slaNieuweTeamnaamOp(index, nieuweNaam) {
+            if (nieuweNaam.trim() !== "") {
+                teamNamen[index] = nieuweNaam;
             }
+            updateWeergave();
+            syncTeamNames(); // Synchroniseer de teamnamen
+        }
 
-            function startTimer() {
-                if (intervals[geselecteerdeTimer]) return;
-                intervals[geselecteerdeTimer] = setInterval(() => {
-                    if (timers[geselecteerdeTimer] > 0) {
-                        timers[geselecteerdeTimer]--;
-                        updateWeergave();
-                    }
-                }, 1000);
-            }
+        // De zichtbaarheid van de timer omschakelen
+        function toggleTimerZichtbaarheid() {
+            zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+            updateWeergave();
+            set(timersRef, timers);
+        }
 
-            function stopTimer() {
-                clearInterval(intervals[geselecteerdeTimer]);
-                intervals[geselecteerdeTimer] = null;
-            }
+        // Initialisatie
+        document.addEventListener("DOMContentLoaded", () => {
+            syncWithFirebase(); // Start de synchronisatie bij het laden van de pagina
 
-            function resetTimer() {
-                timers = [60, 60, 60, 60];
-                updateWeergave();
-            }
-
-            function pasTijdAan(aantal) {
-                timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
-                updateWeergave();
-            }
-
-            function toggleTimerZichtbaarheid() {
-                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
-                updateWeergave();
-            }
-
-            // Functie om handmatig de tijd in te voeren
-            function stelAangepasteTijdIn() {
-                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
-                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
-                    timers[geselecteerdeTimer] = invoerSeconden;
-                    updateWeergave();
-                } else {
-                    alert("Voer een geldig aantal seconden in (minimaal 0)");
-                }
-            }
-
-            function maakTeamnaamBewerkbaar(index) {
-                let naamLabel = document.getElementById(`team-name-${index}`);
-                
-                if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
-                    let inputVeld = document.createElement("input");
-                    inputVeld.type = "text";
-                    inputVeld.value = teamNamen[index];
-                    inputVeld.classList.add("team-input");
-                    inputVeld.style.fontSize = "30px";
-                    inputVeld.style.width = "80%";
-
-                    naamLabel.replaceWith(inputVeld);
-                    inputVeld.focus();
-
-                    inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-
-                    inputVeld.addEventListener("keydown", (event) => {
-                        if (event.key === "Enter") {
-                            slaNieuweTeamnaamOp(index, inputVeld.value);
-                        }
-                    });
-                }
-            }
-
-            function slaNieuweTeamnaamOp(index, nieuweNaam) {
-                if (nieuweNaam.trim() !== "") {
-                    teamNamen[index] = nieuweNaam;
-                }
-                updateWeergave();
-            }
-
-            // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -145,97 +219,7 @@
         });
     </script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-        }
-        .timer {
-            width: 300px;
-            height: 300px;
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 70px;
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
-        }
-        .team-name {
-            font-size: 30px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        .team-input {
-            font-size: 30px;
-            font-weight: bold;
-            width: 80%;
-            text-align: center;
-            border: none;
-            outline: none;
-        }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 60px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: auto;
-            max-width: 120px;
-        }
-        .selected {
-            border: 6px solid red;
-        }
-
-        @media (max-width: 768px) {
-            .timer-container {
-                flex-direction: row;
-            }
-            .timer {
-                width: 230px;
-                height: 230px;
-                font-size: 50px;
-            }
-            .team-name {
-                font-size: 18px;
-            }
-            .controls {
-                width: 90%;
-            }
-            button {
-                font-size: 12px;
-            }
-        }
+        /* Je stijlcode blijft hetzelfde */
     </style>
 </head>
 <body>
