--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+
+    <!-- Firebase CDN (Add this to your <head>) -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
+            // Firebase Config
+            const firebaseConfig = {
+                apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
+                authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
+                databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
+                projectId: "de-slimste-kameraad-timer-ppt",
+                storageBucket: "de-slimste-kameraad-timer-ppt.firebasestorage.app",
+                messagingSenderId: "63484640762",
+                appId: "1:63484640762:web:6541546d615df83c5b7843"
+            };
+
+            // Initialize Firebase
+            const app = firebase.initializeApp(firebaseConfig);
+            const database = firebase.database(app);
+
             let timers = [60, 60, 60, 60];
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
+
+            // Synchronize with Firebase
+            const timersRef = firebase.database().ref('timers');
+            const teamNamesRef = firebase.database().ref('teamNames');
+            const selectedTimerRef = firebase.database().ref('selectedTimer');
+
+            // Synchronize changes to Firebase
+            function syncTimers() {
+                timersRef.set(timers);
+            }
+
+            function syncTeamNames() {
+                teamNamesRef.set(teamNamen);
+            }
+
+            function syncSelectedTimer() {
+                selectedTimerRef.set(geselecteerdeTimer);
+            }
 
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
@@ -21,19 +59,17 @@
 
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Controleer of het teamnaam element bestaat voordat je verder gaat
                     if (teamNaamEl) {
-                        // Als de teamnaam een input veld is, vervang het met een div
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
                             let nieuwNaamDiv = document.createElement("div");
                             nieuwNaamDiv.id = `team-name-${index}`;
                             nieuwNaamDiv.classList.add("team-name");
                             nieuwNaamDiv.textContent = teamNamen[index];
-                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); 
                             teamNaamEl.replaceWith(nieuwNaamDiv);
                         } else {
                             teamNaamEl.textContent = teamNamen[index];
-                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
                         }
                     }
 
@@ -41,41 +77,43 @@
                 });
             }
 
-            function selecteerTimer(index) {
-                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-                geselecteerdeTimer = index;
-                document.getElementById(`timer-container-${index}`).classList.add("selected");
-                document.getElementById("timerSelect").value = index;
-            }
-
+            // Timer Functions
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
+                        syncTimers();
+                    } else {
+                        stopTimer();
                     }
                 }, 1000);
+                syncSelectedTimer();
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
+                syncTimers();
             }
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
+                syncTimers();
             }
 
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
+                syncTimers();
             }
 
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
+                syncTimers();
             }
 
             function stelAangepasteTijdIn() {
@@ -83,33 +121,38 @@
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
                     timers[geselecteerdeTimer] = invoerSeconden;
                     updateWeergave();
+                    syncTimers();
                 } else {
                     alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
             }
 
+            // Timer Selection
+            function selecteerTimer(index) {
+                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+                geselecteerdeTimer = index;
+                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index;
+                syncSelectedTimer();
+            }
+
+            // Making Team Name Editable
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
-                
-                // Alleen doorgaan als het element nog niet vervangen is
+
                 if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                     let inputVeld = document.createElement("input");
                     inputVeld.type = "text";
                     inputVeld.value = teamNamen[index];
                     inputVeld.classList.add("team-input");
 
-                    // Zorg ervoor dat de input hetzelfde blijft qua layout
-                    inputVeld.style.fontSize = "30px"; // Wijzig de font size naar 30px
-                    inputVeld.style.width = "80%"; // Zorg ervoor dat het niet te breed is
+                    inputVeld.style.fontSize = "30px"; 
+                    inputVeld.style.width = "80%"; 
 
-                    // Vervang de huidige naam door het invoerveld
                     naamLabel.replaceWith(inputVeld);
                     inputVeld.focus();
 
-                    // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                     inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-                    
-                    // Wanneer je op enter drukt, sla de nieuwe naam op
                     inputVeld.addEventListener("keydown", (event) => {
                         if (event.key === "Enter") {
                             slaNieuweTeamnaamOp(index, inputVeld.value);
@@ -123,9 +166,37 @@
                     teamNamen[index] = nieuweNaam;
                 }
                 updateWeergave();
+                syncTeamNames();
             }
 
-            // Event listeners voor timer en knoppen
+            // Initialize Firebase Sync
+            function syncWithFirebase() {
+                timersRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        timers = data;
+                        updateWeergave();
+                    }
+                });
+
+                teamNamesRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        teamNamen = data;
+                        updateWeergave();
+                    }
+                });
+
+                selectedTimerRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data !== undefined) {
+                        geselecteerdeTimer = data;
+                        updateWeergave();
+                    }
+                });
+            }
+
+            // Event Listeners for buttons
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -146,102 +217,10 @@
 
             selecteerTimer(0);
             updateWeergave();
+            syncWithFirebase(); // Start sync with Firebase
+
         });
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
-        }
-        .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
-        }
-        .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
-            font-weight: bold;
-            width: 80%;
-            text-align: center;
-            border: none;
-            outline: none;
-        }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 60px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
-        }
-        .selected {
-            border: 6px solid red;
-        }
-
-        /* Media query voor kleinere schermen (mobiel) */
-        @media (max-width: 768px) {
-            .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
-            }
-            .timer {
-                width: 230px;  /* Kleinere breedte voor mobiele weergave */
-                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
-                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
-            }
-            .team-name {
-                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
-            }
-            .controls {
-                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
-            }
-            button {
-                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
-            }
-        }
-    </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
@@ -264,7 +243,6 @@
         </div>
     </div>
 
-    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
